--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": "prisma db push",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio",
+    "db:format": "prisma format",
+    "add-shadcn": "shadcn-ui@latest add"
   },
   "dependencies": {
+    "@prisma/client": "^5.21.1",
     "glob_travel_planner": "file:",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
@@ -21,6 +28,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
     "postcss": "^8",
+    "prisma": "^5.21.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
