--- a/package.json
+++ b/package.json
@@ -1,43 +1,45 @@
 {
-  "name": "glob_travel_planner",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "db:push": "prisma db push",
-    "db:generate": "prisma generate",
-    "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio",
-    "db:format": "prisma format",
-    "add-shadcn": "shadcn-ui@latest add"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.21.1",
-    "@radix-ui/react-scroll-area": "^1.2.0",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "glob_travel_planner": "file:",
-    "lucide-react": "^0.453.0",
-    "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.1",
-    "postcss": "^8",
-    "prisma": "^5.21.1",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+   "name": "glob_travel_planner",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint",
+      "db:push": "prisma db push",
+      "db:generate": "prisma generate",
+      "db:migrate": "prisma migrate dev",
+      "db:studio": "prisma studio",
+      "db:format": "prisma format",
+      "add-shadcn": "shadcn-ui@latest add"
+   },
+   "dependencies": {
+      "@prisma/client": "^5.21.1",
+      "@radix-ui/react-scroll-area": "^1.2.0",
+      "@radix-ui/react-separator": "^1.1.0",
+      "@radix-ui/react-slot": "^1.1.0",
+      "class-variance-authority": "^0.7.0",
+      "clsx": "^2.1.1",
+      "glob_travel_planner": "file:",
+      "lucide-react": "^0.453.0",
+      "next": "15.0.1",
+      "react": "19.0.0-rc-69d4b800-20241021",
+      "react-dom": "19.0.0-rc-69d4b800-20241021",
+      "tailwind-merge": "^2.5.4",
+      "tailwindcss-animate": "^1.0.7"
+   },
+   "devDependencies": {
+      "@types/node": "^20",
+      "@types/react": "^18",
+      "@types/react-dom": "^18",
+      "eslint": "^8",
+      "eslint-config-next": "15.0.1",
+      "postcss": "^8",
+      "prettier": "^3.3.3",
+      "prettier-plugin-tailwindcss": "^0.6.8",
+      "prisma": "^5.21.1",
+      "tailwindcss": "^3.4.1",
+      "typescript": "^5"
+   }
 }
