--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
    },
    "dependencies": {
       "@prisma/client": "^5.21.1",
+      "@radix-ui/react-avatar": "^1.1.1",
       "@radix-ui/react-scroll-area": "^1.2.0",
       "@radix-ui/react-separator": "^1.1.0",
       "@radix-ui/react-slot": "^1.1.0",
+      "@radix-ui/react-tabs": "^1.1.1",
       "class-variance-authority": "^0.7.0",
       "clsx": "^2.1.1",
+      "framer-motion": "^11.11.10",
       "glob_travel_planner": "file:",
       "lucide-react": "^0.453.0",
       "next": "15.0.1",
-      "react": "19.0.0-rc-69d4b800-20241021",
-      "react-dom": "19.0.0-rc-69d4b800-20241021",
+      "react": "^18.3.1",
+      "react-dom": "^18.3.1",
       "tailwind-merge": "^2.5.4",
       "tailwindcss-animate": "^1.0.7"
    },
