--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,6 @@
   "rules": {
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-empty-interface": "off",
-    "@typescript-eslint/no-explicit-any": "off",
-    "typescript-eslint/no-empty-object-type": "off"
+    "@typescript-eslint/no-explicit-any": "off"
   }
 }
