--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
       "glob_travel_planner": "file:",
       "lucide-react": "^0.453.0",
       "next": "15.0.1",
+      "openai": "^4.72.0",
       "react": "^18.3.1",
       "react-day-picker": "^8.10.1",
       "react-dom": "^18.3.1",
       "tailwind-merge": "^2.5.4",
-      "tailwindcss-animate": "^1.0.7"
+      "tailwindcss-animate": "^1.0.7",
+      "zod": "^3.23.8"
    },
    "devDependencies": {
       "@types/node": "^20",
