--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
       "db:migrate": "prisma migrate dev",
       "db:studio": "prisma studio",
       "db:format": "prisma format",
-      "add-shadcn": "shadcn-ui@latest add"
+      "add-shadcn": "shadcn-ui@latest add",
+      "postinstall": "prisma generate"
    },
    "dependencies": {
-      "@prisma/client": "^5.21.1",
+      "@prisma/client": "^6.0.1",
       "@radix-ui/react-accordion": "^1.2.1",
       "@radix-ui/react-avatar": "^1.1.1",
       "@radix-ui/react-label": "^2.1.0",
@@ -52,7 +53,7 @@
       "postcss": "^8",
       "prettier": "^3.3.3",
       "prettier-plugin-tailwindcss": "^0.6.8",
-      "prisma": "^5.21.1",
+      "prisma": "^6.0.1",
       "tailwindcss": "^3.4.1",
       "typescript": "^5"
    }
