--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
       "date-fns": "^3.6.0",
       "framer-motion": "^11.11.10",
       "glob_travel_planner": "file:",
+      "lodash": "^4.17.21",
+      "lodash.debounce": "^4.0.8",
       "lucide-react": "^0.453.0",
       "next": "15.0.1",
       "openai": "^4.72.0",
@@ -45,6 +47,7 @@
       "zod": "^3.23.8"
    },
    "devDependencies": {
+      "@types/lodash": "^4.17.15",
       "@types/node": "^20",
       "@types/react": "^18",
       "@types/react-dom": "^18",
