--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
    "dependencies": {
       "@prisma/client": "^6.0.1",
       "@radix-ui/react-accordion": "^1.2.1",
+      "@radix-ui/react-alert-dialog": "^1.1.5",
       "@radix-ui/react-avatar": "^1.1.1",
       "@radix-ui/react-label": "^2.1.0",
       "@radix-ui/react-popover": "^1.1.2",
@@ -26,9 +27,10 @@
       "@radix-ui/react-select": "^2.1.2",
       "@radix-ui/react-separator": "^1.1.0",
       "@radix-ui/react-slider": "^1.2.1",
-      "@radix-ui/react-slot": "^1.1.0",
+      "@radix-ui/react-slot": "^1.1.1",
       "@radix-ui/react-switch": "^1.1.1",
       "@radix-ui/react-tabs": "^1.1.1",
+      "@radix-ui/react-toast": "^1.2.5",
       "class-variance-authority": "^0.7.0",
       "clsx": "^2.1.1",
       "date-fns": "^3.6.0",
@@ -38,10 +40,12 @@
       "lodash.debounce": "^4.0.8",
       "lucide-react": "^0.453.0",
       "next": "15.0.1",
+      "next-themes": "^0.4.4",
       "openai": "^4.72.0",
       "react": "^18.3.1",
       "react-day-picker": "^8.10.1",
       "react-dom": "^18.3.1",
+      "sonner": "^1.7.4",
       "tailwind-merge": "^2.5.4",
       "tailwindcss-animate": "^1.0.7",
       "zod": "^3.23.8"
