--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
       "db:studio": "prisma studio",
       "db:format": "prisma format",
       "add-shadcn": "shadcn-ui@latest add",
-      "postinstall": "prisma generate"
+      "postinstall": "prisma generate",
+      "db:question-upload": "npx ts-node -T prisma/question-upload.ts"
    },
    "dependencies": {
       "@prisma/client": "^6.0.1",
@@ -62,6 +63,7 @@
       "prettier-plugin-tailwindcss": "^0.6.8",
       "prisma": "^6.0.1",
       "tailwindcss": "^3.4.1",
+      "ts-node": "^10.9.2",
       "typescript": "^5"
    }
 }
