--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
       "db:extract-places": "npx ts-node -T prisma/place-extractor.ts"
    },
    "dependencies": {
-      "@prisma/client": "^6.0.1",
+      "@hookform/resolvers": "^5.0.1",
+      "@next-auth/prisma-adapter": "^1.0.7",
+      "@prisma/client": "^6.6.0",
       "@radix-ui/react-accordion": "^1.2.1",
       "@radix-ui/react-alert-dialog": "^1.1.5",
       "@radix-ui/react-avatar": "^1.1.1",
@@ -33,6 +35,7 @@
       "@radix-ui/react-switch": "^1.1.1",
       "@radix-ui/react-tabs": "^1.1.1",
       "@radix-ui/react-toast": "^1.2.5",
+      "bcryptjs": "^3.0.2",
       "class-variance-authority": "^0.7.0",
       "clsx": "^2.1.1",
       "date-fns": "^3.6.0",
@@ -42,15 +45,17 @@
       "lodash.debounce": "^4.0.8",
       "lucide-react": "^0.453.0",
       "next": "15.0.1",
+      "next-auth": "^4.24.11",
       "next-themes": "^0.4.4",
       "openai": "^4.72.0",
       "react": "^18.3.1",
       "react-day-picker": "^8.10.1",
       "react-dom": "^18.3.1",
+      "react-hook-form": "^7.55.0",
       "sonner": "^1.7.4",
       "tailwind-merge": "^2.5.4",
       "tailwindcss-animate": "^1.0.7",
-      "zod": "^3.23.8"
+      "zod": "^3.24.2"
    },
    "devDependencies": {
       "@types/lodash": "^4.17.15",
